2022-12-21 - version 6.0.0
[*] Add an API to edit any tag in the subject. Standard tags are ignored
    by the new API, use the existing specific functions to change due
	date, threshold, and recurrence

2022-08-30 - version 5.1.1
[*] Set creation date to today for new todo created for a recurrent task if
    the original todo has creation date
[*] TodoStatus::All did not show todos with threshold later than today's date

2022-07-24 - version 5.1.0
[*] Fix updating recurrence for a normal todo item

2022-06-12 - version 5.0.0
[*] Replace 'failure' crate with 'thiserror' one
[*] Clippy fixes

2021-10-17 - version 4.0.0
[+] Threshold date also move forward like due dates when a todo is done
[*] Instead of modifying an existing todo with recurrence, "done" marks the
    current todo completed and creates a new unfinished one with changed
	due and threshold dates.
	If a todo contains only recurrence but no due and threshold dates, the
	todo is marked comleted and no new todo is created.

2021-10-14 - version 3.0.2
[*] When passing list of task IDs, the first task was always ignored

2021-10-13 - version 3.0.1
[*] Fix regression: filter "due=none..4d" did not show tasks with empty due
    dates
2021-09-30 - version 3.0.0
[+] Implement exclude filter for projects, contexts, and tags
    Breaking change: filter struct changed

2021-09-25 - version 2.1.1
[*] Ranges with "none" are inclusive now - as it was stated in docs.
2021-09-25 - version 2.1.0
[+] Threshold in filter is range [..today] by default. It makes all tasks with
    threshold after today hidden.
2021-02-02 - version 2.0.0
[!] The todotxt low-level library is replaced with a new one
[*] Names of projects and contexts are case-sensitive now
[+] Tag order in todo's subject is preserved
[*] Completing todos with recurrence and threshold date does not change
    threshold date
[+] Todo completion now follows strict flag of todo's recurrence. Depending on