@@ -1,7 +1,8 @@
 2022-12-21 - version 6.0.0
-[*] Add an API to edit any tag in the subject. Standard tags are ignored
+[+] Add API to edit any tag in the subject. Standard tags are ignored
     by the new API, use the existing specific functions to change due
 	date, threshold, and recurrence
+[+] Add API for hashtags: add, remove, edit, filter
 
 2022-08-30 - version 5.1.1
 [*] Set creation date to today for new todo created for a recurrent task if
